Navigation logo spacing fix

--- a/themes/patchxr-hugo/assets/scss/components/_navigation.scss
+++ b/themes/patchxr-hugo/assets/scss/components/_navigation.scss
@@ -13,8 +13,8 @@
 	text-transform: none!important;
 	.navbar-brand{
 		img {max-width:100px}
-		padding-left: 10px;
-		@include desktop {
+		padding-left: 0px;
+		@include mobile {
 		padding-left: 10px;
 		}
 	}
